# dhalpm

./: .envrc  .gitignore  LICENSE  README.md  cabal.project  dhalpm.cabal  fourmolu.yaml  generate-test-data.sh  hie.yaml
app/dhalpm/: Main.hs
dhalpm/: README.md  dhalpm.cabal
dhalpm/app/dhalpm/: Main.hs
dhalpm/dhalpm-executable/Dhalpm/: Main.hs  Options.hs
dhalpm/dhalpm-internal/Dhalpm/: Import.hs  Internal.hs
dhalpm/dhalpm-test/Dhalpm/: Test.hs
dhalpm/src/: Dhalpm.hs
dhalpm/test/: Main.hs
dhalpm/weeder/: Main.hs
libalpm/: ChangeLog.md  LICENSE  README.md  libalpm.cabal  weeder.toml
libalpm/libalpm-internal/Archlinux/Alpm/: Binding.chs  Names.chs
libalpm/libalpm-test/Archlinux/Alpm/: Test.hs
libalpm/src/Archlinux/: Alpm.hs
libalpm/test/: Discover.hs
src/: Import.hs  Run.hs  Types.hs
src/Archlinux/: Alpm.chs
src/Types/: Dhall.hs
test/: RunSpec.hs  empty.dhall  install-from-build.dhall  install-from-file.dhall  install-from-syncdb.dhall  install-with-dependency.dhall  mirrorlist  mirrorlist.dhall  providers.dhall  realworld-simple.dhall  remove-orphaned.dhall
test/Archlinux/: AlpmSpec.hs
test/databases/localdb/db/local/depends-package-1-1/: desc  files  mtree
test/databases/localdb/db/local/test-package-1-1/: desc  files  mtree
test/databases/testdb/: depends-package-1-1-any.pkg.tar.zst  providers-1-1-1-any.pkg.tar.zst  providers-2-1-1-any.pkg.tar.zst  test-package-1-1-any.pkg.tar.zst
