cabal-version: 3.14
name: dhalpm
version: 1.0.0
description: Please see the README on Github at <https://github.com/mmhat/dhallpm.tmp#readme>
homepage: https://github.com/mmhat/dhallpm.tmp#readme
bug-reports: https://github.com/mmhat/dhallpm.tmp/issues
author: Dominik Peteler
maintainer: haskell@with-h.at
copyright: 2025 Dominik Peteler
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
-- cabal-gild: discover ./ --include=LICENSE --include=*.md
extra-files:

common language
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    StrictData

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

  default-language: GHC2021

common rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: language
  hs-source-dirs: src/
  build-depends:
    base,
    dhalpm:dhalpm-internal,
    relude,

  -- cabal-gild: discover src/ --include=src/**/*.hs
  exposed-modules: Dhalpm

library dhalpm-internal
  import: language
  visibility: public
  hs-source-dirs: dhalpm-internal/
  build-depends:
    base >=4.17 && <4.22,
    libalpm,
    relude,

  -- cabal-gild: discover dhalpm-internal/ --include=dhalpm-internal/**/*.hs
  exposed-modules:
    Dhalpm.Import
    Dhalpm.Internal

library dhalpm-executable
  import: language
  visibility: public
  hs-source-dirs: dhalpm-executable/
  build-depends:
    base >=4.17 && <4.22,
    dhalpm:dhalpm-internal,
    optparse-simple,
    relude,
    uncaught-exception,

  -- cabal-gild: discover dhalpm-executable/ --include=dhalpm-executable/**/*.hs
  exposed-modules:
    Dhalpm.Main
    Dhalpm.Options

  other-modules:
    PackageInfo_dhalpm

  autogen-modules:
    PackageInfo_dhalpm

library dhalpm-test
  import: language
  visibility: public
  hs-source-dirs: dhalpm-test/
  build-depends:
    base,
    dhalpm:dhalpm-internal,
    relude,
    tasty,

  -- cabal-gild: discover dhalpm-test/ --include=dhalpm-test/**/*.hs
  exposed-modules: Dhalpm.Test

executable dhalpm
  import: language
  import: rts
  hs-source-dirs: app/dhalpm
  main-is: Main.hs
  build-depends:
    base >=4.17 && <4.22,
    dhalpm:dhalpm-executable,

  -- cabal-gild: discover app/dhalpm/ --include=app/dhalpm/**/*.hs --exclude=app/dhalpm/Main.hs
  other-modules:

test-suite test
  import: language
  import: rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-tool-depends: tasty-discover:tasty-discover >=5 && <6
  build-depends:
    base,
    dhalpm:dhalpm-test,
    relude,
    tasty,
    tasty-rerun,

  -- cabal-gild: discover test/ --include=test/**/*.hs --exclude=test/Main.hs
  other-modules: Discover
  other-modules:
    PackageInfo_dhalpm
    Paths_dhalpm

  autogen-modules:
    PackageInfo_dhalpm
    Paths_dhalpm

test-suite weeder
  import: language
  import: rts
  type: exitcode-stdio-1.0
  hs-source-dirs: weeder
  main-is: Main.hs
  build-depends:
    base,
    dhalpm,
    filepath,
    template-haskell,
    weeder,

source-repository head
  type: git
  location: https://github.com/mmhat/dhallpm.tmp
